# TrueHub-rs

./: Cargo.toml
api/: Cargo.toml
api/src/: client.rs  manager.rs  methods.rs
api/src/models/: auth.rs  connection.rs  mod.rs  shares.rs  storage.rs  system.rs
api/src/services/: mod.rs  sharing.rs  user.rs  virt.rs  vm.rs
api/src/store/: accounts.rs
src/: lib.rs  logger.rs  manager.rs  methods.rs  result.rs
src/models/: apps.rs  config.rs  mod.rs  user.rs  virt.rs  vm.rs
src/services/: auth.rs  mod.rs  storage.rs  system.rs
src/store/: accounts.rs  mod.rs  prefs.rs
ui/: Cargo.toml
ui/src/: app.rs  main.rs  runtime.rs  state.rs
ui/src/pages/: disk_info.rs  home.rs  login.rs  mod.rs  performance.rs  pool_details.rs  share_info.rs
