[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
dashmap = "7.0.0-rc2"
tokio = { version = "1.52.3", features = ["sync", "rt", "macros", "fs"] }
tokio-tungstenite = { version = "0.29.0",features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
webpki = "0.22"
tungstenite = "0.29.0"
futures-util = "0.3.32"
oneshot = "0.2.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23",features = ["env-filter"] }
dirs = "6.0.0"
uuid = { version = "1.23.2", features = ["v4"] }
keyring = { version = "3", features = ["sync-secret-service"] }
glib = "0.22.7"
